<resources>
    <string name="app_name">LATE</string>
    <string name="title_home">&lt;font color=\"#0086CC\"&gt;L&lt;/font&gt;ocation&lt;br&gt;&lt;font color=\"#ECDF2B\"&gt;A&lt;/font&gt;nd&lt;br&gt;&lt;font color=\"#AD002D\"&gt;T&lt;/font&gt;im&lt;font color=\"#005E15\"&gt;E&lt;/font&gt;</string>
    <string name="bt_new">New</string>
    <string name="bt_edit">Check &amp; Edit</string>
    <string name="title">Title</string>
    <string name="content">Content</string>

    <string name="header_location">Location</string>
    <string name="header_schedule">Schedule</string>

    <string name="schedule">Schedule</string>
    <string name="data">Date</string>
    <string name="time">Time</string>

    <string name="bt_add">Add</string>
    <string name="bt_set_date">set</string>
    <string name="title_date_dialog">Date</string>
    <string name="message_error_null_title">Title is Empty.</string>
    <string name="message_error_null_context">Content is empty.</string>
    <string name="cancel">cancel</string>
    <string name="every">Every</string>
    <string name="year">Year</string>
    <string name="month">Month</string>
    <string name="day">Day</string>
    <string name="title_time_dialog">Time</string>
    <string name="set">Set</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="config">config</string>
    <string name="config_fragment_title">Configration</string>
    <string name="key_is_night_mode">nightmode</string>
    <string name="config_fragment_night_mode_title">Night Mode</string>
    <string name="config_fragment_night_mode_summary">Night Mode set On/Off</string>
    <string name="key_is_senior_mode">senior</string>
    <string name="config_fragment_senior_mode_title">Senior Mode</string>
    <string name="config_fragment_senior_mode_summary">For senior</string>
    <string name="key_config">config</string>
    <string name="no_permission">You didn\'t give me Permission\nYou can\'t make the alarm!</string>
    <string name="key_title">title</string>
    <string name="key_content">content</string>
    <string name="key_created_data">createdData</string>
    <string name="key_alarm_data">alarmData</string>
    <string name="key_is_location">isLocation</string>
    <string name="key_latitude">latitude</string>
    <string name="key_longitude">longitude</string>
    <string name="key_data">data</string>
</resources>
