<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <variable
            name="date"
            type="freeprojects.oldbigbuddha.kyoto.alarmapplication.POJO.AlarmRealmData" />
    </data>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <TextView
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/title"/>

        <TextView
            android:id="@+id/tv_title_fragment"
            android:layout_weight="5"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@{date.title}"
            android:gravity="end"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <TextView
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/content"/>

        <TextView
            android:id="@+id/tv_content_fragment"
            android:layout_weight="5"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@{date.content}"
            android:gravity="end"/>

    </LinearLayout>


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <TextView
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/header_schedule"/>

        <TextView
            android:id="@+id/tv_schedule_fragment"
            android:layout_weight="4"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="Non"
            android:gravity="end"/>

    </LinearLayout>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <TextView
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/header_location"/>

            <TextView
                android:id="@+id/tv_location_fragment"
                android:layout_weight="4"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="Non"
                android:gravity="end"/>

        </LinearLayout>

        <!--<fragment-->
            <!--android:id="@+id/map_fragment"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="200dp"-->
            <!--android:name="freeprojects.oldbigbuddha.kyoto.alarmapplication.Fragmennts.CustomMapFragment" />-->

    </LinearLayout>

</LinearLayout>
</layout>